[gd_scene load_steps=4 format=3 uid="uid://bdjyog7kfbog4"]

[ext_resource type="Script" path="res://src/tree/tree.gd" id="1_k8grc"]
[ext_resource type="Texture2D" uid="uid://dpt4tnp1vbl7j" path="res://src/tree/tree.png" id="2_55oc5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tbowo"]
radius = 18.0278

[node name="tree" type="Area2D"]
collision_layer = 4
collision_mask = 0
monitoring = false
script = ExtResource("1_k8grc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_tbowo")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, -7)
scale = Vector2(0.188525, 0.202091)
texture = ExtResource("2_55oc5")

[node name="DeathCountdown" type="Timer" parent="."]

[node name="Jiggle Timer" type="Timer" parent="."]

[connection signal="timeout" from="DeathCountdown" to="." method="_on_death_countdown_timeout"]
[connection signal="timeout" from="Jiggle Timer" to="." method="_on_jiggle_timer_timeout"]
